Fix z-index bug with sortable lists and dropdown menu

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -106,7 +106,7 @@
       }
       .list-item-buttons {
         position: relative;
-        z-index: 2;
+        z-index: 1;
       }
       .sortable-handle {
         transform: none;
